--- a/config/locales/models/work_experience/pt-BR.yml
+++ b/config/locales/models/work_experience/pt-BR.yml
@@ -1,7 +1,9 @@
 pt-BR:
   activerecord:
     models:
-      work_experience: Trabalhos
+      work_experience:
+        one: Trabalho
+        other: Trabalhos
     attributes:
       work_experience:
         company_name: Empresa
