--- a/config/locales/views/about/en.yml
+++ b/config/locales/views/about/en.yml
@@ -1,4 +1,5 @@
 en:
-  about:
-    title: About Me
-    file_title: PDF Download
+  frontend:
+    about:
+      title: About Me
+      file_title: PDF Download
