--- a/config/locales/views/about/pt-BR.yml
+++ b/config/locales/views/about/pt-BR.yml
@@ -1,4 +1,5 @@
 pt-BR:
-  about:
-    title: Sobre mim
-    file_title: Download em PDF
+  frontend:
+    about:
+      title: Sobre mim
+      file_title: Download em PDF
