--- a/config/locales/views/education/en.yml
+++ b/config/locales/views/education/en.yml
@@ -1,4 +1,5 @@
 en:
-  education:
-    title: Education and Diplomas
-    subtitle: What I did on my academic career
+  frontend:
+    education:
+      title: Education and Diplomas
+      subtitle: What I did on my academic career
