--- a/config/locales/views/education/pt-BR.yml
+++ b/config/locales/views/education/pt-BR.yml
@@ -1,4 +1,5 @@
 pt-BR:
-  education:
-    title: Educação e Diplomas
-    subtitle: O que eu fiz na minha carreira acadêmica
+  frontend:
+    education:
+      title: Educação e Diplomas
+      subtitle: O que eu fiz na minha carreira acadêmica
