--- a/config/locales/views/work_experience/en.yml
+++ b/config/locales/views/work_experience/en.yml
@@ -1,4 +1,5 @@
 en:
-  experience:
-    title: Work Experience
-    subtitle: Companies that I have worked for
+  frontend:
+    experience:
+      title: Work Experience
+      subtitle: Companies that I have worked for
