--- a/config/locales/views/work_experience/pt-BR.yml
+++ b/config/locales/views/work_experience/pt-BR.yml
@@ -1,4 +1,5 @@
 pt-BR:
-  experience:
-    title: Experiência de trabalho
-    subtitle: Empresas por onde andei
+  frontend:
+    experience:
+      title: Experiência de trabalho
+      subtitle: Empresas por onde andei
