--- a/config/locales/defaults/pt-BR.yml
+++ b/config/locales/defaults/pt-BR.yml
@@ -10,11 +10,16 @@ pt-BR:
     delete: Deletar
     download_cv: Baixar CV
     back: Voltar
-    title: Gustavo Cunha - Engenheiro de Software
-    header: Gustavo Cunha
     submit:
       create: Salvar
       update: Atualizar
+    created: '%{model} criado com sucesso.'
+    updated: '%{model} atualizado com sucesso.'
+    deleted: '%{model} excluido com sucesso.'
+  frontend:
+    helpers:
+      title: Gustavo Cunha - Engenheiro de Software
+      header: Gustavo Cunha
   i18n:
     en: Inglês
     pt-BR: Português
