Reimplement CV in HTML with render in PDF

--- a/config/locales/views/defaults/en.yml
+++ b/config/locales/views/defaults/en.yml
@@ -23,3 +23,10 @@ en:
         github: gmmcal
         linkedin: Gustavo Cunha
         twitter: '@gmmcal'
+  cv:
+    experience: 'Experiences'
+    skill: 'Skills'
+    education: 'Educations'
+    contact: 'Contact'
+    spoken_languages: 'Fluent in: %{languages}'
+    previous_experiences_html: 'For previous experiences, please visit my website at %{link}'
