Rename skills to interests to avoid wrong interpretation
One could read "Skill" as something I already have, but it should mean things I am interest at

--- a/config/locales/models/skill/en.yml
+++ b/config/locales/models/skill/en.yml
@@ -2,8 +2,8 @@ en:
   activerecord:
     models:
       skill:
-        one: Skill
-        other: Skills
+        one: Interest
+        other: Interests
     attributes:
       skill:
         name: Name
