--- a/config/locales/views/skills/en.yml
+++ b/config/locales/views/skills/en.yml
@@ -1,5 +1,5 @@
 en:
   frontend:
     skills:
-      title: Technical Skills
+      title: Areas of Interest
       subtitle: The subjects currently under my radar, but I'm always open to new technologies.
