--- a/config/locales/views/skills/pt-BR.yml
+++ b/config/locales/views/skills/pt-BR.yml
@@ -1,5 +1,5 @@
 pt-BR:
   frontend:
     skills:
-      title: Habilidades Técnicas
+      title: Áreas de Interesse
       subtitle: Os assuntos que mais me interessam no momento, mas estou sempre aberto a novas tecnologias.
