Move from wicked_pdf to prawn

--- a/config/locales/views/defaults/en.yml
+++ b/config/locales/views/defaults/en.yml
@@ -24,6 +24,7 @@ en:
         linkedin: Gustavo Cunha
         twitter: '@gmmcal'
   cv:
+    subject: 'Curriculum from Gustavo Cunha'
     experience: 'Experiences'
     skill: 'Interests'
     education: 'Educations'
