--- a/config/locales/views/defaults/pt-BR.yml
+++ b/config/locales/views/defaults/pt-BR.yml
@@ -24,6 +24,7 @@ pt-BR:
         linkedin: Gustavo Cunha
         twitter: '@gmmcal'
   cv:
+    subject: 'Currículo de Gustavo Cunha'
     experience: 'Experiências'
     skill: 'Interesses'
     education: 'Educação'
